@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>3</version>
+  <version>1</version>
   <dependencies>
     <dependency>profile-plone.app.caching:default</dependency>
     <dependency>profile-plone.app.discussion:default</dependency>
