@@ -3,22 +3,13 @@
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="intranett">
 
-  <genericsetup:upgradeStep
+  <!-- <genericsetup:upgradeStep
       title="Upgrade intranett.policy from 1 to 2."
-      description="Empty step, we don't have upgrades for the first version."
+      description=""
       source="1"
       destination="2"
       handler="intranett.policy.upgrades.null_upgrade_step"
       profile="intranett.policy:default"
-      />
-
-  <genericsetup:upgradeStep
-      title="Upgrade intranett.policy from 2 to 3."
-      description="Add additional memberdata."
-      source="2"
-      destination="3"
-      handler="intranett.policy.upgrades.two.add_memberdata"
-      profile="intranett.policy:default"
-      />
+      /> -->
 
 </configure>
