@@ -1,6 +1,0 @@
-
-
-def add_memberdata(context):
-    # Add new memberdata properties and install custom version of the
-    # memberdata and membership tools
-    pass
