@@ -4,6 +4,10 @@ Changelog
 0.4 - unreleased
 ----------------
 
+- Adjust profile version back to `1`. We will recreate the first site from
+  scratch once more.
+  [hannosch]
+
 - Extend member data to include phones, department, and two image sizes for
   the portraits.
   [ggozad, stefan]
